syntax = "proto3";

option csharp_namespace = "LoggingService.API.Protos";

package logging;

service LogService {
    rpc LogEntry (LogEntryRequest) returns (Empty);
}

message LogEntryRequest {
    string id = 1;
    string timestamp = 2;
    string message = 3;
    string level = 4;
    string stack_trace = 5;
    string source = 6;
    string context = 7;
}

message Empty {}
